Set it up to work offline and add correct icon sizes

--- a/index.html
+++ b/index.html
@@ -6,21 +6,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-    <!--<link rel="import" href="bower_components/platinum-sw/platinum-sw-elements.html">-->
-    <link rel="import" href="/src/merror-app/merror-app.html">
+    <link rel="import" href="/bower_components/platinum-sw/platinum-sw-elements.html">
+    <link rel="import" href="/src/merror-app.html">
     <link rel="manifest" href="manifest.json">
+    
+    <!-- Older Chrome configuration -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="merror.me">
+    <link rel="icon"
+          sizes="192x192"
+          href="src/img/merror@4x.png">
   </head>
   <body>
-    <!--<platinum-sw-register
-        auto-register
+    
+    <platinum-sw-register
+        base-uri="bower_components/platinum-sw/"
         skip-waiting
         clients-claim
-        reload-on-install
-        href="sw-import.js">
-      <platinum-sw-cache
-          default-cache-strategy="networkFirst">
-      </platinum-sw-cache>
-    </platinum-sw-register>-->
+        auto-register
+        reload-on-install>
+      <platinum-sw-cache default-cache-strategy="fastest"></platinum-sw-cache>
+    </platinum-sw-register>
     <merror-app></merror-app>
   </body>
 </html>
