--- a/src/merror-app.html
+++ b/src/merror-app.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../bower_components/webrtc-video/webrtc-video.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/webrtc-video/webrtc-video.html">
 
 <dom-module id="merror-app">
   <template>
