remove undefined observer

--- a/src/merror-app.html
+++ b/src/merror-app.html
@@ -39,8 +39,7 @@
       properties: {
         page: {
           type: String,
-          reflectToAttribute: true,
-          observer: '_pageChanged'
+          reflectToAttribute: true
         }
       },
       observers: [
