Breaking updates that will need fixing.

--- a/src/magic-view.html
+++ b/src/magic-view.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/webrtc-video/webrtc-video.html">
 <link rel="import" href="../bower_components/analog-clock/analog-clock.html">
 
